force-app/main/default/objects/Project_Control__c/Project_Control__c.object-meta.xml
<CustomObject>
    <description>Specific Controls in place inherited from the Project framework chosen. Controls represent specific lower level aspects of the project Framework and Clauses</description>
    <label>Control</label>
    <nameField>
        <label>Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>