force-app/main/default/objects/Project_Control__c/fields/Clause_Control_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clause_Control_Domain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relating to the Parent Clause/Control Domain</description>
    <label>Clause/Control Domain</label>
    <referenceTo>Project_Clause_Control_Domain__c</referenceTo>
    <relationshipLabel>Project Controls</relationshipLabel>
    <relationshipName>Project_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>