force-app/main/default/objects/Project_Control__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <description>Control Number of the particular control, inherits it&apos;s value from the controls underneath the selected framework</description>
    <label>Control Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>