force-app/main/default/objects/Project_Control__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of each control, inherits it&apos;s value from the controls underneath the selected framework</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>