force-app/main/default/objects/Project_Control__c/fields/Project_Framework__c.field-meta.xml
<CustomField>
    <fullName>Project_Framework__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates to the Parent top level Framework</description>
    <label>Project Framework</label>
    <referenceTo>Project_Framework__c</referenceTo>
    <relationshipLabel>Project Controls</relationshipLabel>
    <relationshipName>Project_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>