force-app/main/default/objects/Project_Control__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the Control. Inherits it&apos;s value from the same Title of the Frameworks Controls</description>
    <label>Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>